--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,50 @@
 <th:block layout:fragment="title">
 	<title>THE CUSTOM</title>
 </th:block>
-<th:block layout:fragment="content"></th:block>
+<th:block layout:fragment="content">
+	<div class="main-content">
+		<div class="container-fluid">
+			<!-- TABLE STRIPED -->
+			<div class="panel">
+				<div class="panel-heading">
+					<h3 class="panel-title">Board List</h3>
+				</div>
+				<div class="panel-body">
+					<table class="table table-striped">
+						<thead>
+						<tr>
+							<th>#</th>
+							<th>First Name</th>
+							<th>Last Name</th>
+							<th>Username</th>
+						</tr>
+						</thead>
+						<tbody>
+						<tr>
+							<td>1</td>
+							<td>Steve</td>
+							<td>Jobs</td>
+							<td>@steve</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Simon</td>
+							<td>Philips</td>
+							<td>@simon</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Jane</td>
+							<td>Doe</td>
+							<td>@jane</td>
+						</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<!-- END TABLE STRIPED -->
+		</div>
+	</div>
+</th:block>
 <th:block layout:fragment="script"></th:block>
 </html>
