--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/basic">
 <th:block layout:fragment="title">
-    <title>THE CUSTOM</title>
+  <title>THE CUSTOM 글작성</title>
 </th:block>
 <th:block layout:fragment="content">
-    <h2>Hello The Custom World</h2>
-    <span th:text="${t}">여기는 제목입니다.</span>
-    <span th:text="${c}">여기는 내용입니다.</span>
-    <span>[[ ${w} ]]</span>
+  <div class="main-content">
+    <div class="panel">
+      <div class="panel-heading">
+        <h2>RegBoard</h2>
+      </div>
+      <div class="panel-body">
+        <h3>제목</h3>
+        <input type="text" class="form-control" placeholder="제목을 입력해주세요"><br>
+        <h3>작성자</h3>
+        <input type="text" class="form-control" placeholder="이름을 입력해주세요"><br>
+        <h3>내용</h3>
+        <textarea class="form-control" placeholder="내용을 입력해주세요" rows="6"></textarea>
+        <br>
+        <h3>파일</h3>
+        <input type="file" id="boardFile" th:name="boardImgPath">
+      </div>
+      <div class="panel-footer">
+        
+      </div>
+    </div>
+  </div>
 </th:block>
 <th:block layout:fragment="script"></th:block>
 </html>
