글쓰기 기능 구현

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -18,8 +18,8 @@
                             <span class="input-group-btn"><button type="button" class="btn btn-primary">검색</button></span>
                         </div>
                     </form>
-                    <button type="button" class="btn btn-primary" style="float: right; margin: 0px 2px;">글쓰기</button>
-                    <button type="button" class="btn btn-primary" style="float: right; margin: 0px 2px;">삭제</button>
+                    <button type="button" class="btn btn-primary" style="float: right; margin: 0px 2px;"><a th:href="@{/board/write.do}" style="color: white;">글쓰기</a></button>
+                    <button type="button" class="btn btn-primary" style="float: right; margin: 0px 2px;"><a th:href="@{/board/delete.do}" style="color: white;">삭제</a></button>
                 </div>
 
                 <div class="panel-body">
