--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -94,6 +94,8 @@
 <script th:src="@{/assets/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js}"></script>
 <script th:src="@{/assets/vendor/chartist/js/chartist.min.js}"></script>
 <script th:src="@{/assets/scripts/klorofil-common.js}"></script>
+<script th:src="@{/assets/scripts/function.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 <script>
     $(function() {
         var data, options;
