--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -63,8 +63,8 @@
         <div class="sidebar-scroll">
             <nav>
                 <ul class="nav">
-                    <li><a href="index.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-                    <li><a href="board.html" class=""><i class="lnr lnr-dice"></i> <span>Board</span></a></li>
+                    <li><a th:href="@{/}" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+                    <li><a th:href="@{/}" class=""><i class="lnr lnr-dice"></i> <span>Board</span></a></li>
                     <li><a href="jqGrid.html" class=""><i class="lnr lnr-text-format"></i> <span>JqGrid</span></a></li>
                     <li><a href="api.html" class=""><i class="lnr lnr-linearicons"></i> <span>API</span></a></li>
                 </ul>
