--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -22,7 +22,6 @@
                         <a th:href="@{/board/write.do}" style="color: white;">글쓰기</a>
                     </button>
                     <button type="button" class="btn btn-primary" style="float: right; margin: 0px 2px;">
-<!--                        <a th:href="@{/board/multiDelete.do}" style="color: white;" id="deleteBtn">선택삭제</a>-->
                         <a style="color: white;" id="deleteBtn">선택삭제</a>
                     </button>
                 </div>
@@ -103,31 +102,36 @@
                 };
             });
 
-            // 선택 삭제
+            // 선택 삭제버튼 가져오기
             const deleteBtn = document.querySelector("#deleteBtn");
 
+            // 선택 삭제
             deleteBtn.addEventListener("click", e => {
 
+                // 체크된 값 가져오기
                 const checked = document.querySelectorAll('input[name="rowCheck"]:checked');
                 console.log(checked.length);
 
+                // 체크가 안 되어있으면 false
                 if(checked.length < 1){
                     alert('삭제할 게시글을 체크해주세요.');
                     return false;
                 }
 
+                // seq 배열 생성
                 const seqList = [];
 
+                // seqList에 체크된 것들의 값 넣기
                 checked.forEach((check) => {
                     seqList.push(check.value);
                 });
 
-                console.log(seqList);
-
+                // confirm창 취소 누르면 false
                 if(!confirm('선택한 게시글을 삭제할까요?')){
                     return false;
                 };
 
+                // html을 동적으로 구현해서 게시글 삭제
                 const formHtml = `
                     <form action="/board/multiDelete.do" id="deleteForm" method="post">
                         <input type="hidden" id="seqList" name="seqList" value="${seqList}" />
@@ -137,7 +141,6 @@
                 const form = doc.body.firstChild;
                 document.body.append(form);
                 document.getElementById('deleteForm').submit();
-
                 alert(`게시글이 삭제되었습니다.`);
             });
 
