--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -7,7 +7,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="brand">
-            <a href="index.html"><img th:src="@{/assets/img/logo-dark.png}" alt="Klorofil Logo" class="img-responsive logo"></a>
+            <a th:href="@{/}"><span>THE CUSTOM</span></a>
         </div>
         <div class="container-fluid">
             <div class="navbar-btn">
@@ -63,10 +63,10 @@
         <div class="sidebar-scroll">
             <nav>
                 <ul class="nav">
-                    <li><a th:href="@{/}" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-                    <li><a th:href="@{/}" class=""><i class="lnr lnr-dice"></i> <span>Board</span></a></li>
-                    <li><a href="jqGrid.html" class=""><i class="lnr lnr-text-format"></i> <span>JqGrid</span></a></li>
-                    <li><a href="api.html" class=""><i class="lnr lnr-linearicons"></i> <span>API</span></a></li>
+                    <li><a th:href="@{/}" th:classappend="${board}? 'active'"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+                    <li><a th:href="@{/}" th:classappend="${board}? 'active'"><i class="lnr lnr-dice"></i> <span>Board</span></a></li>
+                    <li><a th:href="@{/jqGrid.do}" th:classappend="${jqGrid}? 'active'"><i class="lnr lnr-text-format"></i> <span>JqGrid</span></a></li>
+                    <li><a th:href="@{/api.do}" th:classappend="${api}? 'active'"><i class="lnr lnr-linearicons"></i> <span>API</span></a></li>
                 </ul>
             </nav>
         </div>
